<resources>
    <string name="app_name">NewsApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_onboarding_pager">OnboardingPager</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!--Onboarding buttons-->
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>

    <!--Onboarding page 1 -->
    <string name="welcome_title">Welcome to NewsApp</string>
    <string name="welcome_tagline">Your simple news application</string>

    <!--Onboarding page 2-->
    <!--<string name="setup_title"><![CDATA[Locale & Category]]></string>-->
    <string name="setup_title">Quick Setup</string>
    <string name="setup_language">Article Language</string>
    <string name="setup_categories">News Categories</string>
    <string name="SPK_SOURCE_RESPONSE">SP_SOURCE_RESPONSE</string>


</resources>
