<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="xyz.markswebsite.newsapp.onboarding.OnboardingPager">

    
    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="#11000000">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:background="@color/white" />

        <Button
            android:id="@+id/intro_btn_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/skip"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/intro_indicator_0"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="4dp"
                android:background="@drawable/circle" />

            <ImageView
                android:id="@+id/intro_indicator_1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="4dp"
                android:background="@drawable/circle_outline" />

            <ImageView
                android:id="@+id/intro_indicator_2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="4dp"
                android:background="@drawable/circle_outline" />

        </LinearLayout>

        <!-- This overlaps the next button in the last slide -->
        <Button
            android:id="@+id/intro_btn_finish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/intro_btn_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/next"
            android:textColor="@color/white" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
